--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     ================================================== -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/fontAwesome5Pro.css">
+    <link rel="stylesheet" href="assets/css/glightbox.min.css">
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -63,6 +64,9 @@
                 <div class="menu-wrapper ms-auto">
                     <ul class="main-menu">
                         <li class="menu-item">
+                            <a href="index.html">HOME</a>
+                        </li>
+                        <li class="menu-item">
                             <a href="services.html">SERVICES</a>
                         </li>
                         <li class="menu-item menu-item-has-submenu">
@@ -81,9 +85,6 @@
                         </li>
                         <li class="menu-item">
                             <a href="projects.html">PROJECTS</a>
-                        </li>
-                        <li class="menu-item">
-                            <a href="works.html">WORKS</a>
                         </li>
                         <li class="menu-item">
                             <a href="blogs.html">BLOGS</a>
@@ -147,9 +148,6 @@
                 </li>
                 <li class="menu-item">
                     <a href="projects.html">PROJECTS</a>
-                </li>
-                <li class="menu-item">
-                    <a href="works.html">WORKS</a>
                 </li>
                 <li class="menu-item">
                     <a href="blogs.html">BLOGS</a>
@@ -707,7 +705,7 @@
         
         <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
         Start Service Section
-    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
+        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
         <div class="contact__section">
             <div class="container">
                 <div class="section-title">
@@ -1106,6 +1104,7 @@
     <script src="assets/js/jquery-3.6.0.min.js"></script>
     <script src="assets/js/popper.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/glightbox.min.js"></script>
     <script src="assets/js/swiper-bundle.min.js"></script>
     <script src="assets/js/script.js"></script>
 
