--- a/projects.html
+++ b/projects.html
@@ -63,6 +63,9 @@
                 <div class="menu-wrapper ms-auto">
                     <ul class="main-menu">
                         <li class="menu-item">
+                            <a href="index.html">HOME</a>
+                        </li>
+                        <li class="menu-item">
                             <a href="services.html">SERVICES</a>
                         </li>
                         <li class="menu-item menu-item-has-submenu">
@@ -81,9 +84,6 @@
                         </li>
                         <li class="menu-item">
                             <a href="projects.html">PROJECTS</a>
-                        </li>
-                        <li class="menu-item">
-                            <a href="works.html">WORKS</a>
                         </li>
                         <li class="menu-item">
                             <a href="blogs.html">BLOGS</a>
@@ -149,9 +149,6 @@
                     <a href="projects.html">PROJECTS</a>
                 </li>
                 <li class="menu-item">
-                    <a href="works.html">WORKS</a>
-                </li>
-                <li class="menu-item">
                     <a href="blogs.html">BLOGS</a>
                 </li>
                 <li class="menu-item">
@@ -198,6 +195,108 @@
             </div>
         </div>
         <!--~~./ end Page Banner ~~-->
+
+                <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+        Start Our works
+        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
+        <div class="our__projects">
+            <div class="container">
+                <!-- Project Item Start -->
+                <div class="project__item list">
+                    <div class="thumbnail">
+                        <a href="#">
+                            <img 
+                                src="assets/images/projects/al_bidda_park.png" 
+                                alt="AL Bidaa Park"
+                            >
+                        </a>
+                    </div>
+                    <div class="description">
+                        <h4 class="subtitle">
+                            LANDSCAPING
+                        </h4>
+                        <h2 class="title">
+                            AL Bidaa Park
+                        </h2>
+                        <p>
+                            It’s not every day you encounter a pool of this magnitude. We love when our clients have grand ideas that DBI can bring to magnificent fruition.  If the pool wasn’t smashing enough, we created an impressive outdoor kitchen and dining space graced with tasteful low profile landscaping.
+                        </p>
+                        <div class="readmore">
+                            <a href="projects-details.html">
+                                See Details
+                                <i class="fal fa-long-arrow-right"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <!-- Project Item Start -->
+                
+                <!-- Project Item Start -->
+                <div class="project__item list">
+                    <div class="thumbnail">
+                        <a href="#">
+                            <img 
+                                src="assets/images/projects/massila_private_villa.png" 
+                                alt="Massila Private Villa"
+                            >
+                        </a>
+                    </div>
+                    <div class="description">
+                        <h4 class="subtitle">
+                            CONSTRUCTION
+                        </h4>
+                        <h2 class="title">
+                            Massila Private Villa
+                        </h2>
+                        <p>
+                            It’s not every day you encounter a pool of this magnitude. We love when our clients have grand ideas that DBI can bring to magnificent fruition.  If the pool wasn’t smashing enough, we created an impressive outdoor kitchen and dining space graced with tasteful low profile landscaping.
+                        </p>
+                        <div class="readmore">
+                            <a href="projects-details.html">
+                                See Details
+                                <i class="fal fa-long-arrow-right"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <!-- Project Item Start -->
+                
+                <!-- Project Item Start -->
+                <div class="project__item list">
+                    <div class="thumbnail">
+                        <a href="#">
+                            <img 
+                                src="assets/images/projects/al_wakra_heritage.png" 
+                                alt="Al Wakra Heritage Village Hotel"
+                            >
+                        </a>
+                    </div>
+                    <div class="description">
+                        <h4 class="subtitle">
+                            LANDSCAPING, IRRIGATION
+                        </h4>
+                        <h2 class="title">
+                            Al Wakra Heritage Village Hotel
+                        </h2>
+                        <p>
+                            It’s not every day you encounter a pool of this magnitude. We love when our clients have grand ideas that DBI can bring to magnificent fruition.  If the pool wasn’t smashing enough, we created an impressive outdoor kitchen and dining space graced with tasteful low profile landscaping.
+                        </p>
+                        <div class="readmore">
+                            <a href="projects-details.html">
+                                See Details
+                                <i class="fal fa-long-arrow-right"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <!-- Project Item Start -->
+
+                <div class="load-more text-center">
+                    <a href="#" class="btn__primary">LOAD MORE</a>
+                </div>
+            </div>
+        </div>
+        <!--~~./ end Our works ~~-->
     </main>
     <!--~~./ end site Main Content ~~-->
 
@@ -388,6 +487,7 @@
     <script src="assets/js/jquery-3.6.0.min.js"></script>
     <script src="assets/js/popper.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/glightbox.min.js"></script>
     <script src="assets/js/swiper-bundle.min.js"></script>
     <script src="assets/js/script.js"></script>
 
