--- a/service-details.html
+++ b/service-details.html
@@ -16,7 +16,7 @@
 
     <!-- Site Title
     ================================================== -->
-    <title>About Tammuz &#8211; Trading &amp; Contracting W.L.L.</title>
+    <title>Landscaping service of Tammuz &#8211; Trading &amp; Contracting W.L.L.</title>
 
     <!-- Site Favicon
     ================================================== -->
@@ -32,6 +32,7 @@
     ================================================== -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/fontAwesome5Pro.css">
+    <link rel="stylesheet" href="assets/css/glightbox.min.css">
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -63,6 +64,9 @@
                 <div class="menu-wrapper ms-auto">
                     <ul class="main-menu">
                         <li class="menu-item">
+                            <a href="index.html">HOME</a>
+                        </li>
+                        <li class="menu-item">
                             <a href="services.html">SERVICES</a>
                         </li>
                         <li class="menu-item menu-item-has-submenu">
@@ -81,9 +85,6 @@
                         </li>
                         <li class="menu-item">
                             <a href="projects.html">PROJECTS</a>
-                        </li>
-                        <li class="menu-item">
-                            <a href="works.html">WORKS</a>
                         </li>
                         <li class="menu-item">
                             <a href="blogs.html">BLOGS</a>
@@ -149,9 +150,6 @@
                     <a href="projects.html">PROJECTS</a>
                 </li>
                 <li class="menu-item">
-                    <a href="works.html">WORKS</a>
-                </li>
-                <li class="menu-item">
                     <a href="blogs.html">BLOGS</a>
                 </li>
                 <li class="menu-item">
@@ -183,7 +181,7 @@
         <div class="page__banner" style="background-image: url(assets/images/services/banner-bg.png);">
             <div class="container">
                 <div class="banner__content">
-                    <h1>ABOUT US</h1>
+                    <h1>LANDSCAPING</h1>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb">
                             <li class="breadcrumb-item">
@@ -193,7 +191,7 @@
                                 <a href="services.html">Services</a>
                             </li>
                             <li class="breadcrumb-item active" aria-current="page">
-                                Civil Construction
+                                Landscaping
                             </li>
                         </ol>
                     </nav>
@@ -201,6 +199,172 @@
             </div>
         </div>
         <!--~~./ end Page Banner ~~-->
+
+        <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+        Start Service Details
+        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
+        <div class="service__details">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6 order-lg-last">
+                        <div class="section__image">
+                            <img 
+                                src="assets/images/services/dtls1.png" 
+                                alt="Landscaping services"
+                            >
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="section__content">
+                            <h2 class="title">
+                                Your Professional Garden Design Team
+                            </h2>
+                            <p>
+                                We are happy to help you perfect your project no matter where you are in the landscaping process. Some of our clients start with a blank slate and little idea of what they want in a final product. Others know exactly what they want. Our job is to take you from an idea to a fully realized project as seamlessly as possible. Sometimes clients just need some minor changes made to an existing project. We are available no matter where you're at in the process.
+                            </p>
+                            <p>
+                                <a href="#" class="btn__secondary">
+                                    WORK WITH US
+                                </a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="section__image">
+                            <img 
+                                src="assets/images/services/dtls2.png" 
+                                alt="Landscaping services"
+                            >
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="section__content">
+                            <h2 class="title">
+                                Your Dream Yard
+                            </h2>
+                            <p>
+                                Having been in business as long as we have, we’ve come across our fair share of projects that were done hastily or not even brought to fruition. To us that’s unacceptable. We do things correctly the first time and don’t consider a job complete until our client is 100% satisfied. We understand the frustration of having to redo landscaping work that should have been done right the first time. Our goal is to minimize future costs as much as possible and create beautiful, lasting work that you can be proud of for years to come. Ready to get started? Let us know so we can get you the yard of your dreams!
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-6 order-lg-last">
+                        <div class="section__image">
+                            <img 
+                                src="assets/images/services/dtls3.png" 
+                                alt="Landscaping services"
+                            >
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="section__content">
+                            <h2 class="title">
+                                Landscaping services
+                            </h2>
+                            <p>
+                                We provide the following landscaping services:
+                            </p>
+                            <ul class="list-disc">
+                                <li>
+                                    <a href="#">
+                                        Decorative garden
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        Lawn laying
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        Local landscaping
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        Plant supply
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        Rain gardens
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        Nursery
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div> 
+                <div class="gallery__block swiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <div class="gallery__item">
+                                <a href="assets/images/services/dtls1.png" 
+                                    class="glightbox" 
+                                    data-title="Landscaping services"
+                                    data-description="We understand the frustration of having to redo landscaping work that should have been done right the first time."
+                                    data-gallery="gallery1">
+                                    <img 
+                                        src="assets/images/services/dtls1.png" 
+                                        alt="Image Alt Text"
+                                    >
+                                </a>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="gallery__item">
+                                <a href="assets/images/services/dtls2.png" 
+                                    class="glightbox" 
+                                    data-title="Landscaping services"
+                                    data-description="We understand the frustration of having to redo landscaping work that should have been done right the first time."
+                                    data-gallery="gallery1">
+                                    <img 
+                                        src="assets/images/services/dtls2.png" 
+                                        alt="Image Alt Text"
+                                    >
+                                </a>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="gallery__item">
+                                <a href="assets/images/services/dtls3.png" 
+                                    class="glightbox" 
+                                    data-title="Landscaping services"
+                                    data-description="We understand the frustration of having to redo landscaping work that should have been done right the first time."
+                                    data-gallery="gallery1">
+                                    <img 
+                                        src="assets/images/services/dtls3.png" 
+                                        alt="Image Alt Text"
+                                    >
+                                </a>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="gallery__item">
+                                <a href="assets/images/services/dtls2.png" 
+                                    class="glightbox" 
+                                    data-title="Landscaping services"
+                                    data-description="We understand the frustration of having to redo landscaping work that should have been done right the first time."
+                                    data-gallery="gallery1">
+                                    <img 
+                                        src="assets/images/services/dtls2.png" 
+                                        alt="Image Alt Text"
+                                    >
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>             
+            </div>
+        </div>
+        <!--~~./ end Service Details ~~-->
     </main>
     <!--~~./ end site Main Content ~~-->
 
@@ -407,6 +571,7 @@
     <script src="assets/js/jquery-3.6.0.min.js"></script>
     <script src="assets/js/popper.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/glightbox.min.js"></script>
     <script src="assets/js/swiper-bundle.min.js"></script>
     <script src="assets/js/script.js"></script>
 
