--- a/contact.html
+++ b/contact.html
@@ -63,6 +63,9 @@
                 <div class="menu-wrapper ms-auto">
                     <ul class="main-menu">
                         <li class="menu-item">
+                            <a href="index.html">HOME</a>
+                        </li>
+                        <li class="menu-item">
                             <a href="services.html">SERVICES</a>
                         </li>
                         <li class="menu-item menu-item-has-submenu">
@@ -81,9 +84,6 @@
                         </li>
                         <li class="menu-item">
                             <a href="projects.html">PROJECTS</a>
-                        </li>
-                        <li class="menu-item">
-                            <a href="works.html">WORKS</a>
                         </li>
                         <li class="menu-item">
                             <a href="blogs.html">BLOGS</a>
@@ -147,9 +147,6 @@
                 </li>
                 <li class="menu-item">
                     <a href="projects.html">PROJECTS</a>
-                </li>
-                <li class="menu-item">
-                    <a href="works.html">WORKS</a>
                 </li>
                 <li class="menu-item">
                     <a href="blogs.html">BLOGS</a>
@@ -386,6 +383,7 @@
     <script src="assets/js/jquery-3.6.0.min.js"></script>
     <script src="assets/js/popper.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/glightbox.min.js"></script>
     <script src="assets/js/swiper-bundle.min.js"></script>
     <script src="assets/js/script.js"></script>
 
