working on about page

--- a/index.html
+++ b/index.html
@@ -66,9 +66,6 @@
                         <li class="menu-item">
                             <a href="index.html">HOME</a>
                         </li>
-                        <li class="menu-item">
-                            <a href="services.html">SERVICES</a>
-                        </li>
                         <li class="menu-item menu-item-has-submenu">
                             <a href="about.html">ABOUT</a>
                             <ul class="sub-menu">
@@ -76,13 +73,41 @@
                                     <a href="about.html">About Us</a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="">Organization Charts</a>
+                                    <a href="org-chart.html">Organization Charts</a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="">Organization Charts</a>
+                                    <a href="mision.html">Mision - Vision</a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="management-msg.html">Management Message</a>
                                 </li>
                             </ul>
                         </li>
+                        <li class="menu-item  menu-item-has-submenu">
+                            <a href="services.html">SERVICES</a>
+                            <ul class="sub-menu">
+                                <li class="menu-item">
+                                    <a href="service-details.html">
+                                        Civil Construction
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="service-details.html">
+                                        Landscape
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="service-details.html">
+                                        Irrigation & Drainage
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="service-details.html">
+                                        Operation & Maintenance
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>                        
                         <li class="menu-item">
                             <a href="projects.html">PROJECTS</a>
                         </li>
@@ -129,23 +154,48 @@
                 <li class="menu-item">
                     <a href="index.html">HOME</a>
                 </li>
-                <li class="menu-item">
-                    <a href="services.html">SERVICES</a>
-                </li>
                 <li class="menu-item menu-item-has-submenu">
                     <a href="javascript:void(0)">ABOUT</a>
                     <ul class="sub-menu">
                         <li class="menu-item">
-                            <a href="about.html">ABOUT US</a>
+                            <a href="about.html">About Us</a>
                         </li>
                         <li class="menu-item">
-                            <a href="#">ORGANIZATION CHARTS</a>
+                            <a href="org-chart.html">Organization Charts</a>
                         </li>
                         <li class="menu-item">
-                            <a href="#">LOREM IPSUM</a>
+                            <a href="mision.html">Mision - Vision</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="management-msg.html">Management Message</a>
                         </li>
                     </ul>
                 </li>
+                <li class="menu-item  menu-item-has-submenu">
+                    <a href="javascript:void(0)">SERVICES</a>
+                    <ul class="sub-menu">
+                        <li class="menu-item">
+                            <a href="service-details.html">
+                                Civil Construction
+                            </a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="service-details.html">
+                                Landscape
+                            </a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="service-details.html">
+                                Irrigation & Drainage
+                            </a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="service-details.html">
+                                Operation & Maintenance
+                            </a>
+                        </li>
+                    </ul>
+                </li>                        
                 <li class="menu-item">
                     <a href="projects.html">PROJECTS</a>
                 </li>
@@ -342,7 +392,7 @@
                                 alt="Tammuz Advantages"
                             />
                             <img 
-                                src="assets/images/advantages/img2.jpg" 
+                                src="assets/images/advantages/img2.png" 
                                 class="img2"
                                 alt="Tammuz Advantages"
                             />
