--- a/about.html
+++ b/about.html
@@ -32,6 +32,7 @@
     ================================================== -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/fontAwesome5Pro.css">
+    <link rel="stylesheet" href="assets/css/glightbox.min.css">
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -65,9 +66,6 @@
                         <li class="menu-item">
                             <a href="index.html">HOME</a>
                         </li>
-                        <li class="menu-item">
-                            <a href="services.html">SERVICES</a>
-                        </li>
                         <li class="menu-item menu-item-has-submenu">
                             <a href="about.html">ABOUT</a>
                             <ul class="sub-menu">
@@ -75,13 +73,41 @@
                                     <a href="about.html">About Us</a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="">Organization Charts</a>
+                                    <a href="org-chart.html">Organization Charts</a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="">Organization Charts</a>
+                                    <a href="mision.html">Mision - Vision</a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="management-msg.html">Management Message</a>
                                 </li>
                             </ul>
                         </li>
+                        <li class="menu-item  menu-item-has-submenu">
+                            <a href="services.html">SERVICES</a>
+                            <ul class="sub-menu">
+                                <li class="menu-item">
+                                    <a href="service-details.html">
+                                        Civil Construction
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="service-details.html">
+                                        Landscape
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="service-details.html">
+                                        Irrigation & Drainage
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="service-details.html">
+                                        Operation & Maintenance
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>                        
                         <li class="menu-item">
                             <a href="projects.html">PROJECTS</a>
                         </li>
@@ -128,23 +154,48 @@
                 <li class="menu-item">
                     <a href="index.html">HOME</a>
                 </li>
-                <li class="menu-item">
-                    <a href="services.html">SERVICES</a>
-                </li>
                 <li class="menu-item menu-item-has-submenu">
                     <a href="javascript:void(0)">ABOUT</a>
                     <ul class="sub-menu">
                         <li class="menu-item">
-                            <a href="about.html">ABOUT US</a>
+                            <a href="about.html">About Us</a>
                         </li>
                         <li class="menu-item">
-                            <a href="#">ORGANIZATION CHARTS</a>
+                            <a href="org-chart.html">Organization Charts</a>
                         </li>
                         <li class="menu-item">
-                            <a href="#">LOREM IPSUM</a>
+                            <a href="mision.html">Mision - Vision</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="management-msg.html">Management Message</a>
                         </li>
                     </ul>
                 </li>
+                <li class="menu-item  menu-item-has-submenu">
+                    <a href="javascript:void(0)">SERVICES</a>
+                    <ul class="sub-menu">
+                        <li class="menu-item">
+                            <a href="service-details.html">
+                                Civil Construction
+                            </a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="service-details.html">
+                                Landscape
+                            </a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="service-details.html">
+                                Irrigation & Drainage
+                            </a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="service-details.html">
+                                Operation & Maintenance
+                            </a>
+                        </li>
+                    </ul>
+                </li>                        
                 <li class="menu-item">
                     <a href="projects.html">PROJECTS</a>
                 </li>
@@ -200,11 +251,269 @@
         <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
         Start About Details
         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-        <div class="about__us">
-            
+        <div class="about__us__overview">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-md-8">
+                        <div class="section__content text-center">
+                            <h3 class="title">
+                                Introducing TAMMUZ Trading & Contracting W.L.L
+                            </h3>
+                            <p>
+                                Tammuz Trading & Contracting W.L.L. company has shared in prestigious landscape contracting projects since its establishment in 2015. With a management team of over 25 years of experience in Qatar and the region, Tammuz has built a reputation for delivering state-of-the-art solutions and services in projects related to landscaping and trading, developed to suit its clients’ best interests.
+                            </p>
+                            <p>
+                                Tammuz is aiming to expand on that standing by adding additional ventures to its resume in various areas including green building, renewable and sustainable energy, and  remediation and restoration solutions by providing full in-house landscape design and construction services
+                            </p>
+                        </div>
+                        <div class="section__image">
+                            <img 
+                                src="assets/images/about/overview.png" 
+                                alt="overview of TAMMUZ"
+                            >
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <!--~~./ end About Details ~~-->
 
+        <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+        Start Flat Features Section
+        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
+        <div class="certification">
+            <div class="container">
+                <div class="section-title">
+                    <div class="subtitle">
+                        CERTIFICATS
+                    </div>
+                    <h3 class="title">
+                        Certification & Awards
+                    </h3>
+                </div>
+                <div class="certificates__wrapper">
+                    <!-- Certificate Item -->
+                    <div class="item">
+                        <a href="assets/images/certificates/1.png" 
+                            class="glightbox"
+                            data-title="Certificate Name"
+                            data-description="Certificate Details / Description text goes here..."
+                            data-gallery="certificates">
+                            <img 
+                                src="assets/images/certificates/1.png" 
+                                alt=""
+                            >
+                        </a>
+                    </div>
+                    <!-- Certificate Item End -->
+
+                    <!-- Certificate Item -->
+                    <div class="item">
+                        <a href="assets/images/certificates/2.png" 
+                            class="glightbox"
+                            data-title="Certificate Name"
+                            data-description="Certificate Details / Description text goes here..."
+                            data-gallery="certificates">
+                            <img 
+                                src="assets/images/certificates/2.png" 
+                                alt=""
+                            >
+                        </a>
+                    </div>
+                    <!-- Certificate Item End -->
+
+                    <!-- Certificate Item -->
+                    <div class="item">
+                        <a href="assets/images/certificates/3.png" 
+                            class="glightbox"
+                            data-title="Certificate Name"
+                            data-description="Certificate Details / Description text goes here..."
+                            data-gallery="certificates">
+                            <img 
+                                src="assets/images/certificates/3.png" 
+                                alt=""
+                            >
+                        </a>
+                    </div>
+                    <!-- Certificate Item End -->
+
+                    <!-- Certificate Item -->
+                    <div class="item">
+                        <a href="assets/images/certificates/4.png" 
+                            class="glightbox"
+                            data-title="Certificate Name"
+                            data-description="Certificate Details / Description text goes here..."
+                            data-gallery="certificates">
+                            <img 
+                                src="assets/images/certificates/4.png" 
+                                alt=""
+                            >
+                        </a>
+                    </div>
+                    <!-- Certificate Item End -->
+
+                    <!-- Certificate Item -->
+                    <div class="item">
+                        <a href="assets/images/certificates/5.jpg" 
+                            class="glightbox"
+                            data-title="Certificate Name"
+                            data-description="Certificate Details / Description text goes here..."
+                            data-gallery="certificates">
+                            <img 
+                                src="assets/images/certificates/5.jpg" 
+                                alt=""
+                            >
+                        </a>
+                    </div>
+                    <!-- Certificate Item End -->
+
+                    <!-- Certificate Item -->
+                    <div class="item">
+                        <a href="assets/images/certificates/6.png" 
+                            class="glightbox"
+                            data-title="Certificate Name"
+                            data-description="Certificate Details / Description text goes here..."
+                            data-gallery="certificates">
+                            <img 
+                                src="assets/images/certificates/6.jpg" 
+                                alt=""
+                            >
+                        </a>
+                    </div>
+                    <!-- Certificate Item End -->
+
+                    <!-- Certificate Item -->
+                    <div class="item">
+                        <a href="assets/images/certificates/7.png" 
+                            class="glightbox"
+                            data-title="Certificate Name"
+                            data-description="Certificate Details / Description text goes here..."
+                            data-gallery="certificates">
+                            <img 
+                                src="assets/images/certificates/7.jpg" 
+                                alt=""
+                            >
+                        </a>
+                    </div>
+                    <!-- Certificate Item End -->
+                </div>
+            </div>
+        </div>
+        <!--~~./ end Flat Features Section ~~-->
+
+        <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+        Start Our Works Section
+        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
+        <div class="our__works" style="background-image: url(assets/images/works/works-section-bg.png);">
+            <div class="container">
+                <div class="section-title">
+                    <div class="subtitle">
+                        PORTFOLIO
+                    </div>
+                    <h3 class="title">
+                        Best Projects in a Row
+                    </h3>
+                </div>
+
+                <div class="works__slider swiper">
+                    <div class="swiper-wrapper">
+                        <!-- Works Item -->
+                        <div class="swiper-slide">
+                            <div class="swiper-slide">
+                                <div class="works__items">
+                                    <div class="thumbnail">
+                                        <img 
+                                            src="assets/images/works/1.png" 
+                                            alt=""
+                                        >
+                                        <div class="description">
+                                            AL BIDAA PARK
+                                            <div class="line"></div>
+                                        </div>
+                                    </div>
+                                    <a href="#" class="stretched-link"></a>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Works Item -->
+                        <div class="swiper-slide">
+                            <div class="swiper-slide">
+                                <div class="works__items">
+                                    <div class="thumbnail">
+                                        <img 
+                                            src="assets/images/works/2.png" 
+                                            alt=""
+                                        >
+                                        <div class="description">
+                                            MASSILA PRIVATE VILLA
+                                            <div class="line"></div>
+                                        </div>
+                                    </div>
+                                    <a href="#" class="stretched-link"></a>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Works Item -->
+                        <div class="swiper-slide">
+                            <div class="swiper-slide">
+                                <div class="works__items">
+                                    <div class="thumbnail">
+                                        <img 
+                                            src="assets/images/works/3.png" 
+                                            alt=""
+                                        >
+                                        <div class="description">
+                                            AL WAKRA HERITAGE VILLAGE
+                                            <div class="line"></div>
+                                        </div>
+                                    </div>
+                                    <a href="#" class="stretched-link"></a>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Works Item -->
+                        <div class="swiper-slide">
+                            <div class="swiper-slide">
+                                <div class="works__items">
+                                    <div class="thumbnail">
+                                        <img 
+                                            src="assets/images/works/5.png" 
+                                            alt=""
+                                        >
+                                        <div class="description">
+                                            PRIVATE VILLA
+                                            <div class="line"></div>
+                                        </div>
+                                    </div>
+                                    <a href="#" class="stretched-link"></a>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Works Item -->
+                        <div class="swiper-slide">
+                            <div class="swiper-slide">
+                                <div class="works__items">
+                                    <div class="thumbnail">
+                                        <img 
+                                            src="assets/images/works/4.png" 
+                                            alt=""
+                                        >
+                                        <div class="description">
+                                            AL WAKRA HERITAGE VILLAGE
+                                            <div class="line"></div>
+                                        </div>
+                                    </div>
+                                    <a href="#" class="stretched-link"></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="works__pagination text-center"></div>
+                </div>
+            </div>
+        </div>
+        <!--~~./ end Our Works Section ~~-->
+        
     </main>
     <!--~~./ end site Main Content ~~-->
 
