--- a/services.html
+++ b/services.html
@@ -32,6 +32,7 @@
     ================================================== -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/fontAwesome5Pro.css">
+    <link rel="stylesheet" href="assets/css/glightbox.min.css">
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -65,9 +66,6 @@
                         <li class="menu-item">
                             <a href="index.html">HOME</a>
                         </li>
-                        <li class="menu-item">
-                            <a href="services.html">SERVICES</a>
-                        </li>
                         <li class="menu-item menu-item-has-submenu">
                             <a href="about.html">ABOUT</a>
                             <ul class="sub-menu">
@@ -75,13 +73,41 @@
                                     <a href="about.html">About Us</a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="">Organization Charts</a>
+                                    <a href="org-chart.html">Organization Charts</a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="">Organization Charts</a>
+                                    <a href="mision.html">Mision - Vision</a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="management-msg.html">Management Message</a>
                                 </li>
                             </ul>
                         </li>
+                        <li class="menu-item  menu-item-has-submenu">
+                            <a href="services.html">SERVICES</a>
+                            <ul class="sub-menu">
+                                <li class="menu-item">
+                                    <a href="service-details.html">
+                                        Civil Construction
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="service-details.html">
+                                        Landscape
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="service-details.html">
+                                        Irrigation & Drainage
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="service-details.html">
+                                        Operation & Maintenance
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>                        
                         <li class="menu-item">
                             <a href="projects.html">PROJECTS</a>
                         </li>
@@ -128,23 +154,48 @@
                 <li class="menu-item">
                     <a href="index.html">HOME</a>
                 </li>
-                <li class="menu-item">
-                    <a href="services.html">SERVICES</a>
-                </li>
                 <li class="menu-item menu-item-has-submenu">
                     <a href="javascript:void(0)">ABOUT</a>
                     <ul class="sub-menu">
                         <li class="menu-item">
-                            <a href="about.html">ABOUT US</a>
+                            <a href="about.html">About Us</a>
                         </li>
                         <li class="menu-item">
-                            <a href="#">ORGANIZATION CHARTS</a>
+                            <a href="org-chart.html">Organization Charts</a>
                         </li>
                         <li class="menu-item">
-                            <a href="#">LOREM IPSUM</a>
+                            <a href="mision.html">Mision - Vision</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="management-msg.html">Management Message</a>
                         </li>
                     </ul>
                 </li>
+                <li class="menu-item  menu-item-has-submenu">
+                    <a href="javascript:void(0)">SERVICES</a>
+                    <ul class="sub-menu">
+                        <li class="menu-item">
+                            <a href="service-details.html">
+                                Civil Construction
+                            </a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="service-details.html">
+                                Landscape
+                            </a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="service-details.html">
+                                Irrigation & Drainage
+                            </a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="service-details.html">
+                                Operation & Maintenance
+                            </a>
+                        </li>
+                    </ul>
+                </li>                        
                 <li class="menu-item">
                     <a href="projects.html">PROJECTS</a>
                 </li>
@@ -345,9 +396,7 @@
                     </div>
                 </div>
 
-                <div class="section__gap">
-                    
-                </div>
+                <div class="section__gap"></div>
 
                 <div class="section-title">
                     <h3 class="title">
